--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="styles.css">
     <style>
       p {
-        colour: green;
+        background-colour: green;
+        colour: white;
+        font-size: 20px;
       }
     </style>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button style="colour: black; background-color: orange;">Inline Method</button>
+    <button style="colour: black; background-color: orange; font-size:20px;">Inline Method</button>
   </body>
 </html>
