--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <style>
       p {
-        background-colour: green;
+        background-color: green;
         colour: white;
         font-size: 20px;
       }
@@ -17,6 +17,6 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button style="colour: black; background-color: orange; font-size:20px;">Inline Method</button>
+    <button style="background-color: orange; font-size:20px;">Inline Method</button>
   </body>
 </html>
