--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -15,10 +15,10 @@
     </style>
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
+    <p class="cool">Number 1 - I'm a class!</p>
     <div id="one">Number 2 - I'm one ID.</div>
     <p class="cooler">Number 3 - I'm a class, but cooler!</p>
     <div id="two">Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="cool">Number 5 - I'm a class!</p>
   </body>
 </html>
