Fix: syntax error in id elements from '.' to '#'

--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -7,7 +7,7 @@
     <title>Class and ID Selectors</title>
     <link rel="stylesheet" href="style.css">
     <style>
-      .two {
+      #two {
         background-color: rgb(35, 214, 139);
         font-size: 24px;
         font-weight: bold;
