--- a/foundations/flex/06-flex-layout/index.html
+++ b/foundations/flex/06-flex-layout/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="header">
-      <ul class="left-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Store</a></li>
-      </ul>
-      <ul class="right-links">
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
-    </div>
+    <div class="container">
+      <div class="header">
+        <ul class="left-links">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Store</a></li>
+        </ul>
+        <ul class="right-links">
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Settings</a></li>
+        </ul>
+      </div>
     <div class="content">
       <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
       <div class="input">
@@ -38,5 +39,7 @@
         <li><a href="#">Terms</a></li>
       </ul>
     </div>
+    </div>
+    
   </body>
 </html>
